--- a/index.css
+++ b/index.css
@@ -1,5 +1,144 @@
+@font-face {
+    font-family: Norse-Bold;
+    src: url('./Norse-Bold.otf');
+}
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+body {
+    display: flex;
+    font-family: sans-serif;
+}
+
+/* Sidebar */
+
+.sidebar {
+    width: 35vw;
+    height: 100vh;
+    background: url(https://images.unsplash.com/photo-1585202900225-6d3ac20a6962?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80);
+}
+
+.logo {
+    width: 100%;
+    height: 15vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    margin-top: 20vh;
+    color: white;
+    text-align: center;
+    line-height: 15vh;
+    font-size: 48px;
+    font-family: Norse-Bold, serif;
+}
+
+/* Content */
+
+.content {
+    background-color: rgb(235, 235, 235);
+    width: 65vw;
+}
+
+/* Top Content */
+
+.content-top {
+    height: 35vh;
+    padding: 15vh 20vw 1vh 3vw;
+    color: black;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.content-top p {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.italic {
+    font-style: italic;
+}
+
+/* Signup Content */
+
+.signup-container {
+    height: 35vh;
+    background-color: white;
+    padding: 2vh 20vw 2vh 3vw;
+    box-shadow: 0 5px 5px rgb(215, 215, 215), 0 -1px 5px rgb(215, 215, 215);
+}
+
+.signup-container h3 {
+    font-size: 24px;
+}
+
+.signup-form {
+    margin-top: 30px;
+}
+
+.form-input {
+    display: inline-block;
+    position: relative;
+    width: 20vw;
+    height: 4vw;
+}
+
+.form-input label {
+    display: block;
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+.form-input input {
+    height: 1.75vw;
+    width: 15vw;
+    border: 2px solid rgb(225, 225, 225);
+    border-radius: 5px;
+    padding: 3px;
+}
+
+input.focus {
+    border: 2px solid rgb(100, 125, 255);
+    box-shadow: 3px 3px 5px rgb(215,215,215);
+}
+
+input.error {
+    border: 2px solid rgb(255, 100, 100);
+}
+
+.error-text {
+    position: absolute;
+    font-size: 12px;
+    color: rgb(255, 100, 100);
+}
+
+/* Bottom Content */
+
+.content-bottom {
+    height: 30vh;
+    padding: 5vh 20vw 2vh 3vw;
+}
+
+.create-account {
+    padding: 10px 50px;
+    font-size: 20px;
+    border: none;
+    border-radius: 10px;
+    background-color: #596D48;
+    color: white;
+    font-weight:500;
+    box-shadow: 5px 5px 5px rgb(215, 215, 215);
+    margin-bottom: 30px;
+}
+
+.content-bottom p {
+    font-weight: bold;
+}
+
+.login-text {
+    color: #596D48;
+    text-decoration: none;
 }
